# yas-mcp

./: .env.example  .env.test  .gitignore  .tool-versions  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  adjustments.yaml  build.rs  config.yaml  docker-compose.yml  test.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
elixir_openapi_mcp/: mix.exs
elixir_openapi_mcp/lib/: elixir_openapi_mcp.ex
elixir_openapi_mcp/lib/elixir_openapi_mcp/: application.ex  cli.ex
elixir_openapi_mcp/lib/elixir_openapi_mcp/config/: loader.ex
elixir_openapi_mcp/lib/elixir_openapi_mcp/parser/: adjuster.ex  elixir_openapi_parser.ex
elixir_openapi_mcp/lib/elixir_openapi_mcp/requester/: http_requester.ex
elixir_openapi_mcp/lib/elixir_openapi_mcp/server/: server.ex  tool_handler.ex
examples/: petstore.yaml  prefect-oas-3.6.1.json
examples/todo-app/: adjustments.yaml  openapi.yaml
scripts/: create-config.sh  setup-keycloak.sh  setup-oauth-client.sh  test-integration.sh  test-oauth-login.sh  test-oauth2.sh
src/: cli.rs  lib.rs  main.rs
src/internal/: mod.rs
src/internal/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  oauth2.rs
src/internal/auth/providers/: github.rs  google.rs  mod.rs
src/internal/config/: _config.rs  config.rs  mod.rs
src/internal/gemini/: mod.rs  transcript.rs  validator.rs
src/internal/logger/: logger.rs  mod.rs
src/internal/mcp/: mod.rs  processor.rs  protocol.rs  registry.rs
src/internal/models/: adjustments.rs  mod.rs
src/internal/parser/: _parser.rs  adjuster.rs  mod.rs  parser.rs  types.rs
src/internal/requester/: http_requester.rs  mod.rs  types.rs
src/internal/server/: _server.rs  mod.rs  server.rs
src/internal/server/handler/: http.rs  mod.rs
src/internal/server/tool/: handler.rs  mod.rs
src/internal/transport/: mock.rs  mod.rs  runner.rs  stdio.rs
tests/: adjuster_tests.rs  debug_requester_configuration.rs  debug_tests.rs  integration_tests.rs  stdio_protocol_tests.rs
tests/fixtures/: mod.rs  openapi.rs  requests.rs  responses.rs
