[package]
name = "yas-mcp"
description = "yet another swagger mcp"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # Add this line for build scripts
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"

# MCP SDK
rmcp = { version = "0.10.0", features = [
    "transport-async-rw", 
    "transport-streamable-http-server",
    "transport-streamable-http-server-session", 
    "transport-worker",
    "transport-sse-server",
    ] }
rmcp-macros = "0.10.0"
schemars = "1.2"

# Web/HTTP dependencies
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# OpenAPI handling
openapiv3 = { version = "2.0.0-rc.1" }

# Configuration
config = "0.15"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For potential TUI (if we keep that functionality)
crossterm = "0.29"
tui = "0.19"
async-trait = "0.1.89"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
tokio-util = "0.7.17"
futures = "0.3.31"
uuid = "1.19.0"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "si", "rustc", "cargo"] }
anyhow = "1.0"
